Fix: alignment of play/pause button

--- a/app/assets/stylesheets/base/audio.scss
+++ b/app/assets/stylesheets/base/audio.scss
@@ -30,6 +30,8 @@
     &:before {
       content: "\f215";
       font-family: Ionicons;
+      position: absolute;
+      top: 5px;
     }
   }
 
